feat: support native system-browser sign-in
